<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PolishScorebook</string>
    <string name="menu_settings">Settings</string>
    <string name="create">Create!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hiya neighbor!</string>
    <string name="title_activity_polish_scorebook">PolishScorebook</string>
    <string name="title_activity_players">Players</string>
    <string name="title_activity_new_player">Create New Player</string>
    <string name="title_activity_edit_player">Edit Player</string>
    <string name="title_activity_new_venue">New Venue</string>
    <string name="title_activity_new_session">New Session</string>
    <string name="title_activity_new_game">New Game</string>
    <string name="title_activity_game_in_progress">Game In-Progress</string>
    <string name="title_activity_games">GamesActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_menu_container">MenuContainerActivity</string>
    <string name="button_players">Players</string>
    <string name="button_games">Games</string>
    <string name="button_venues">New Venue</string>
    <string name="button_newGame">New Game</string>
    <string name="button_newPlayer">New Player</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menu_add">Add</string>
    <string name="menu_players">Players</string>
    <string name="menu_venues">Venues</string>
    <string name="menu_games">Games</string>
    <string name="menu_sessions">Sessions</string>
    <string name="gip_p2_hint">PlayerTwo</string>
    <string name="gip_gid_hint">gid</string>
    <string name="gip_gamenum_text">Game #</string>
    <string name="gip_venue_text">Venue:</string>
    <string name="gip_session_text">Session:</string>
    <string name="gip_vs_text">vs.</string>
    <string name="gip_p1_hint">PlayerOne</string>
    <string name="gip_session_hint">sessionName</string>
    <string name="gip_date_hint">date</string>
    <string name="gip_venue_hint">venue</string>
    <string name="gip_ballHigh_button">high</string>
    <string name="gip_ballLeft_button">left</string>
    <string name="gip_bottle_button">bottle</string>
    <string name="gip_pole_button">pole</string>
    <string name="gip_cup_button">cup</string>
    <string name="gip_strike_button">strike</string>
    <string name="gip_confirm_button">confirm</string>
    <string name="gip_drop_radio">drop</string>
    <string name="gip_catch_radio">catch</string>
    <string name="gip_stalwart_radio">stalwart</string>
    <string name="gip_ballRight_button">right</string>
    <string name="gip_ballLow_button">low</string>
    <string name="gip_error_check">error</string>
    <string name="gip_owngoal_check">own goal</string>
    <string name="gip_goaltend_check">goaltend</string>
    <string name="gip_short_check">short</string>
    <string name="gip_trap_check">trap</string>
    <string name="gip_broken_check">broken</string>
    <string name="gip_onfire_check">onFire</string>
    <string name="gip_firedon_check">firedOn</string>
    <string name="gip_drinkhit_check">drinkHit</string>
    <string name="gip_drinkdrop_check">drinkDrop</string>
    <string name="title_activity_simple_settings">Settings</string>
    <string name="title_activity_venues">Venues</string>
    <string name="title_activity_sessions">Sessions</string>

</resources>