<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/addButton" android:showAsAction="always" android:title="@string/menu_add" android:icon="@drawable/ic_menu_add"></item>
    <item android:id="@+id/games" android:showAsAction="always" android:title="@string/menu_games"></item>
    <item android:id="@+id/players" android:showAsAction="always" android:title="@string/menu_players"></item>
    <item android:id="@+id/venues" android:showAsAction="always" android:title="@string/menu_venues"></item>
    <item android:id="@+id/sessions" android:showAsAction="always" android:title="@string/menu_sessions"></item>
    <item android:id="@+id/action_settings" android:orderInCategory="100" android:showAsAction="never" android:title="@string/action_settings"/>

</menu>