<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameInProgress" >

    <TextView
        android:id="@+id/textView_players"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/gip_p1_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/textView_session"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/gip_session_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />
    
    <TextView
        android:id="@+id/textView_gId"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/gip_gid_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/textView_venue"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/gip_venue_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/textView_datePlayed"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_gId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/gip_date_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />
    
    <ImageView 
    	android:id="@+id/gip_dead_high"
    	android:layout_height="10dp"
    	android:layout_width = "100dp"
    	android:layout_alignParentLeft="true"
    	android:layout_below="@id/textView_venue"
    	android:layout_marginLeft="20dp"
    	android:layout_marginRight="20dp"
    	android:background="#00FF00"
    	/>
    
    <ImageView 
    	android:id="@+id/gip_dead_left"
    	android:layout_height="100dp"
    	android:layout_width = "10dp"
    	android:layout_alignParentLeft="true"
    	android:layout_below="@id/gip_dead_high"
    	android:layout_marginTop="20dp"
    	android:layout_marginBottom="20dp"
    	android:background="#00FF00"
    	/>"

    <ImageButton
        android:id="@+id/gip_button_high"
        android:src="@drawable/btn_high"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/gip_dead_left"
        android:layout_below="@id/gip_dead_high"
        android:onClick="buttonPressed"
        android:padding="10dp"
        android:contentDescription="high" />
    
    <ImageButton
        android:id="@+id/gip_button_trap"
        android:src="@drawable/btn_high"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/gip_button_high"
        android:layout_below="@+id/textView_venue"
        android:onClick="buttonPressed"
        android:padding="10dp"
        android:contentDescription="trap" />

    <ImageButton
        android:id="@+id/gip_button_left"
        android:src="@drawable/btn_left"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gip_button_high"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="buttonPressed"
        android:text="@string/gip_ballLeft_button"
        android:contentDescription="left" />

    <ImageButton
        android:id="@+id/gip_button_strike"
        android:src="@drawable/btn_strike"
        android:layout_toRightOf="@+id/gip_button_left"
        android:layout_below="@+id/gip_button_high"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"                
        android:onClick="buttonPressed"
        android:text="@string/gip_strike_button"
        android:contentDescription="strike" />
    
    <ImageButton
        android:id="@+id/gip_button_right"
        android:src="@drawable/btn_right"
        android:layout_toRightOf="@+id/gip_button_strike"
        android:layout_below="@+id/gip_button_high"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="buttonPressed"
        android:text="@string/gip_ballRight_button"
        android:contentDescription="right" />
    
    <ImageButton
        android:id="@+id/gip_button_low"
        android:src="@drawable/btn_low"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gip_button_strike"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:onClick="buttonPressed"
        android:contentDescription="low" />
    
    <ImageButton
        android:id="@+id/gip_button_short"
        android:src="@drawable/btn_low"
        android:layout_toRightOf="@+id/gip_button_low"
        android:layout_below="@+id/gip_button_strike"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:onClick="buttonPressed"
        android:contentDescription="low" />
    
    <ImageView 
    	android:id="@+id/gip_dead_right"
    	android:layout_height="100dp"
    	android:layout_width = "10dp"
    	android:layout_toRightOf="@id/gip_button_right"
    	android:layout_below="@id/gip_dead_high"
    	android:layout_marginTop="20dp"
    	android:layout_marginBottom="20dp"
    	android:background="#00FF00"
    	/>
    
    <ImageView 
    	android:id="@+id/gip_dead_low"
    	android:layout_height="10dp"
    	android:layout_width = "100dp"
    	android:layout_alignParentLeft="true"
    	android:layout_below="@id/gip_button_low"
    	android:layout_marginLeft="20dp"
    	android:layout_marginRight="20dp"
    	android:background="#00FF00"
    	/>
    
    <Button
        android:id="@+id/gip_button_pole"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/gip_dead_low"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="buttonPressed"
        android:text="@string/gip_pole_button"
        android:contentDescription="pole" />
	
	<Button
        android:id="@+id/gip_button_bottle"
        android:layout_toRightOf="@id/gip_button_pole"
        android:layout_below="@id/gip_dead_low"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="buttonPressed"
        android:text="@string/gip_bottle_button"
        android:contentDescription="bottle" />
    
    <Button
        android:id="@+id/gip_button_cup"
        android:layout_toRightOf="@+id/gip_button_bottle"
        android:layout_below="@id/gip_dead_low"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="buttonPressed"
        android:text="@string/gip_cup_button"
        android:contentDescription="cup" />
    
     <NumberPicker
         android:id="@+id/numPicker_catch"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/gip_button_bottle"
         android:layout_width="230dp"
         android:layout_height="120dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/gip_ownGoal"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/numPicker_catch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="errorButtonPressed"
        android:text="Own Goal"
        android:contentDescription="ownGoal" />
    
    <Button
        android:id="@+id/gip_playerError"
        android:layout_toRightOf="@id/gip_ownGoal"
        android:layout_below="@id/numPicker_catch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="errorButtonPressed"
        android:text="Error"
        android:contentDescription="playerError" />

    <TableLayout
		android:id="@+id/scoreTable_header"
		android:layout_toRightOf="@+id/gip_button_trap"
		android:layout_below="@+id/textView_datePlayed"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:background="#013567" >
	  	<TableRow>
			<TextView
				android:layout_width="50sp"
				android:layout_height="fill_parent"
				android:paddingLeft="1dp"
				android:paddingRight="1dp"
				android:gravity="center"
				android:background="#fff"
				android:text="inning" />

			<TextView
			    android:id="@+id/header_p1"
			    android:layout_width="100dp"
			    android:layout_margin="1dp"
			    android:background="#fff"
			    android:gravity="center_horizontal" />

			<TextView
			    android:id="@+id/header_p2"
			    android:layout_width="100dp"
			    android:layout_margin="1dp"
			    android:background="#fff"
			    android:gravity="center_horizontal" />

			<TextView
				android:gravity="center_horizontal"
				android:layout_margin="1dp" />
		</TableRow>
	</TableLayout>
	
    <android.support.v4.view.ViewPager
	    android:layout_toRightOf="@+id/gip_button_trap"
		android:layout_below="@+id/scoreTable_header"
		android:layout_above="@+id/textView_throwCount"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="top"
	    android:id="@+id/viewPager_throwsTables" >
	    
	    <android.support.v4.view.PagerTitleStrip
			android:id="@+id/pager_title_strip"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:background="#33b5e5"
			android:paddingBottom="4dp"
			android:paddingTop="4dp"
			android:textColor="#fff" />
	    
	    </android.support.v4.view.ViewPager>

    <TextView
        android:id="@+id/textView_throwCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />
	
</RelativeLayout>